Replace banner image with new screenshot

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/1bc1b717-6078-4643-9eab-c6e371bd602e.JPG" alt="" />
+										<img src="images/Screenshot 2025-09-15 at 9.05.00 PM.png" alt="" />
 									</span>
 								</section>
 
