Fix image loading issue by renaming screenshot file to remove spaces

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/Screenshot 2025-09-15 at 9.05.00 PM.jpg" alt="" />
+										<img src="images/vineeth-screenshot.jpg" alt="" />
 									</span>
 								</section>
 
