Personalize banner content: add bigger subtitle, replace with personal description, remove Learn More button

--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
 									<div class="content">
 										<header>
 											<h1>Hi, I'm Vineeth Reddy</h1>
-											<p>A free and fully responsive site template</p>
+											<h2>Student at Rutgers University</h2>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
-										</ul>
+										<p>I'm a junior at Rutgers University - New Brunswick, triple majoring in Computer Science, Data Science, and Economics. I am driven by a passion for exploring how technology can streamline processes, enhance decision-making, and solve intricate challenges across various industries. I want to apply my technical, analytical, and problem solving skills to help solve real world challenges.</p>
+										<p>In terms of career goals, I aspire to work at the intersection of software development, machine learning, and economics, leveraging data-driven insights to inform decision making and create solutions that promote sustainable growth and equitable outcomes in a rapidly evolving global economy.</p>
+										<p>I enjoy connecting with new people, especially from different backgrounds, as it allows me to exchange ideas, and gain new perspectives. Building these relationships helps me grow both personally and professionally while fostering a deeper understanding of the diverse challenges and opportunities in the world.</p>
 									</div>
 									<span class="image object">
 										<img src="images/vineeth-screenshot.jpg" alt="" />
