Update Discrete Structures course description with portfolio-focused language

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 											<span class="icon solid fa-project-diagram"></span>
 											<div class="content">
 												<h3>Discrete Structures 1/2</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Built strong foundation in combinatorics, discrete probability, and graph theory essential for algorithm design and analysis. Developed expertise in counting techniques, probability distributions, and graph algorithms including path analysis and connectivity problems.</p>
 											</div>
 										</article>
 										<article>
