Update Computer Architecture course description with portfolio-focused language

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 											<span class="icon solid fa-microchip"></span>
 											<div class="content">
 												<h3>Computer Architecture</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Gained comprehensive understanding of computer system design including processor architecture, memory hierarchy, and I/O systems. Developed proficiency in C programming, assembly language, digital logic design, and the critical software/hardware interface that drives modern computing systems.</p>
 											</div>
 										</article>
 										<article>
