Update Design and Analysis of Computer Algorithms course description with portfolio-focused language

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 											<span class="icon solid fa-cogs"></span>
 											<div class="content">
 												<h3>Design and Analysis of Computer Algorithms</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Mastered complexity analysis and algorithm design principles through studying sorting, searching, and graph algorithms including shortest path and minimum spanning tree. Developed understanding of NP-completeness, approximation algorithms, and computational complexity theory for solving real-world optimization problems.</p>
 											</div>
 										</article>
 										<article>
