Update Software Methodology course description with portfolio-focused language

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 											<span class="icon solid fa-tools"></span>
 											<div class="content">
 												<h3>Software Methodology</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Developed expertise in large-scale Java application development using object-oriented design principles, design patterns (MVC, Singleton), and GUI programming with Swing/AWT. Gained proficiency in professional development tools including Eclipse, version control systems, unit testing, and introductory experience with mobile development and multithreading.</p>
 											</div>
 										</article>
 									</div>
