Make social media icons larger and add interactive links to GitHub, LinkedIn, and email

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 								<header id="header">
 									<a href="index.html" class="logo"></a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+										<li><a href="https://github.com/Vin916" target="_blank" class="icon brands fa-github" style="font-size: 1.2em;"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/vineeth-reddy123/" target="_blank" class="icon brands fa-linkedin" style="font-size: 1.2em;"><span class="label">LinkedIn</span></a></li>
+										<li><a href="mailto:vineethr767@gmail.com" class="icon solid fa-envelope" style="font-size: 1.2em;"><span class="label">Email</span></a></li>
 									</ul>
 								</header>
 
