--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			/* Course icon hover effects */
+			.features article .icon {
+				transition: color 0.3s ease;
+			}
+			.features article:hover .icon {
+				color: #f56565 !important;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
