--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 		<style>
 			/* Course icon hover effects */
 			.features article .icon {
-				transition: color 0.3s ease;
+				transition: color 0.3s ease, transform 0.2s ease;
+				cursor: pointer;
 			}
 			.features article:hover .icon {
+				color: #f56565 !important;
+				transform: scale(1.1);
+			}
+			/* Alternative selector in case the above doesn't work */
+			.features article:hover span.icon {
 				color: #f56565 !important;
 			}
 		</style>
