Remove More buttons and add project descriptions for Cache Simulator and Poker projects

--- a/index.html
+++ b/index.html
@@ -122,20 +122,14 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="Cache Simulator Project" /></a>
 											<h3>Cache Simulator</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
+											<p>Developed a comprehensive cache simulator in C that models different cache architectures and replacement policies. Implemented LRU, FIFO, and random replacement algorithms with configurable cache sizes and associativities to analyze performance metrics.</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="Poker Against AI Bots Project" /></a>
 											<h3>Poker Against AI Bots</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
+											<p>Built an interactive poker game in JavaScript featuring intelligent AI opponents with varying difficulty levels. Implemented Texas Hold'em rules, betting strategies, and a responsive web interface for an engaging multiplayer experience against computer players.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
