--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="Cache Simulator Project" /></a>
+											<a href="#" class="image"><img src="images/cache-simulator.svg" alt="Cache Simulator Project" /></a>
 											<h3>Cache Simulator</h3>
 											<p>Developed a comprehensive cache simulator in C that models different cache architectures and replacement policies. Implemented LRU, FIFO, and random replacement algorithms with configurable cache sizes and associativities to analyze performance metrics.</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="Poker Against AI Bots Project" /></a>
+											<a href="#" class="image"><img src="images/untitles.jpg" alt="Poker Against AI Bots Project" /></a>
 											<h3>Poker Against AI Bots</h3>
 											<p>Built an interactive poker game in JavaScript featuring intelligent AI opponents with varying difficulty levels. Implemented Texas Hold'em rules, betting strategies, and a responsive web interface for an engaging multiplayer experience against computer players.</p>
 										</article>
