--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
 										<h2>Projects</h2>
 									</header>
 									<div class="posts">
-										<article>
-											<a href="#" class="image"><img src="images/cache-simulator.svg" alt="Cache Simulator Project" /></a>
+										<article onclick="window.open('https://github.com/Vin916/Cache-Simulator', '_blank')" style="cursor: pointer;">
+											<a href="https://github.com/Vin916/Cache-Simulator" target="_blank" class="image"><img src="images/cache-simulator.svg" alt="Cache Simulator Project" /></a>
 											<h3>Cache Simulator</h3>
 											<p>Developed a comprehensive cache simulator in C that models different cache architectures and replacement policies. Implemented LRU, FIFO, and random replacement algorithms with configurable cache sizes and associativities to analyze performance metrics.</p>
 										</article>
-										<article>
-											<a href="#" class="image"><img src="images/Untitled.jpg" alt="Poker Against AI Bots Project" /></a>
+										<article onclick="window.open('https://github.com/Vin916/Poker', '_blank')" style="cursor: pointer;">
+											<a href="https://github.com/Vin916/Poker" target="_blank" class="image"><img src="images/Untitled.jpg" alt="Poker Against AI Bots Project" /></a>
 											<h3>Poker Against AI Bots</h3>
-											<p>Built an interactive poker game in JavaScript featuring intelligent AI opponents with varying difficulty levels. Implemented Texas Hold'em rules, betting strategies, and a responsive web interface for an engaging multiplayer experience against computer players.</p>
+											<p>Built an interactive poker game in JavaScript featuring intelligent AI opponent with varying difficulty levels. Implemented Texas Hold'em rules, betting strategies, and a responsive web interface for an engaging multiplayer experience against computer players.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
