--- a/index.html
+++ b/index.html
@@ -121,20 +121,16 @@
 										<h2>Projects</h2>
 									</header>
 									<div class="posts">
-										<a href="https://github.com/Vin916/Cache-Simulator" target="_blank" style="text-decoration: none; color: inherit;">
-											<article style="cursor: pointer; transition: transform 0.2s ease;">
-												<div class="image"><img src="images/cache-simulator.svg" alt="Cache Simulator Project" /></div>
-												<h3>Cache Simulator</h3>
-												<p>Built a high-performance cache simulator in C implementing LRU, FIFO, and random replacement algorithms with configurable architectures. Developed comprehensive performance analysis tools to optimize cache hit rates and memory access patterns for computer systems.</p>
-											</article>
-										</a>
-										<a href="https://github.com/Vin916/Poker" target="_blank" style="text-decoration: none; color: inherit;">
-											<article style="cursor: pointer; transition: transform 0.2s ease;">
-												<div class="image"><img src="images/Untitled.jpg" alt="Poker Against AI Bots Project" /></div>
-												<h3>Poker Against AI Bots</h3>
-												<p>Developed a full-stack poker web application with AI bots at multiple difficulty levels using Node.js/Express and Socket.IO for real-time gameplay. Engineered intelligent bot strategies utilizing hand strength analysis, pot odds calculations, and positional awareness to create challenging opponents.</p>
-											</article>
-										</a>
+										<article>
+											<a href="https://github.com/Vin916/Cache-Simulator" target="_blank" class="image"><img src="images/cache-simulator.svg" alt="Cache Simulator Project" /></a>
+											<h3>Cache Simulator <a href="https://github.com/Vin916/Cache-Simulator" target="_blank" class="icon brands fa-github" style="font-size: 0.8em; margin-left: 0.5em; color: #666;"></a></h3>
+											<p>Built a high-performance cache simulator in C implementing LRU, FIFO, and random replacement algorithms with configurable architectures. Developed comprehensive performance analysis tools to optimize cache hit rates and memory access patterns for computer systems.</p>
+										</article>
+										<article>
+											<a href="https://github.com/Vin916/Poker" target="_blank" class="image"><img src="images/Untitled.jpg" alt="Poker Against AI Bots Project" /></a>
+											<h3>Poker Against AI Bots <a href="https://github.com/Vin916/Poker" target="_blank" class="icon brands fa-github" style="font-size: 0.8em; margin-left: 0.5em; color: #666;"></a></h3>
+											<p>Developed a full-stack poker web application with AI bots at multiple difficulty levels using Node.js/Express and Socket.IO for real-time gameplay. Engineered intelligent bot strategies utilizing hand strength analysis, pot odds calculations, and positional awareness to create challenging opponents.</p>
+										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<h3>Tempus ullamcorper</h3>
