--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 			.features article:hover h3 {
 				color: #f56a6a;
 			}
+			/* Project image sizing */
+			.posts article .image img {
+				width: 100%;
+				height: 250px;
+				object-fit: cover;
+				object-position: center;
+			}
 		</style>
 	</head>
 	<body class="is-preload">
@@ -123,12 +130,12 @@
 									<div class="posts">
 										<article>
 											<a href="https://github.com/Vin916/Cache-Simulator" target="_blank" class="image"><img src="images/cache-simulator.svg" alt="Cache Simulator Project" /></a>
-											<h3>Cache Simulator <a href="https://github.com/Vin916/Cache-Simulator" target="_blank" class="icon brands fa-github" style="font-size: 0.8em; margin-left: 0.5em; color: #666;"></a></h3>
+											<h3 style="display: flex; justify-content: space-between; align-items: center;">Cache Simulator <a href="https://github.com/Vin916/Cache-Simulator" target="_blank" class="icon brands fa-github" style="font-size: 1.2em; color: #666;"></a></h3>
 											<p>Built a high-performance cache simulator in C implementing LRU, FIFO, and random replacement algorithms with configurable architectures. Developed comprehensive performance analysis tools to optimize cache hit rates and memory access patterns for computer systems.</p>
 										</article>
 										<article>
 											<a href="https://github.com/Vin916/Poker" target="_blank" class="image"><img src="images/Untitled.jpg" alt="Poker Against AI Bots Project" /></a>
-											<h3>Poker Against AI Bots <a href="https://github.com/Vin916/Poker" target="_blank" class="icon brands fa-github" style="font-size: 0.8em; margin-left: 0.5em; color: #666;"></a></h3>
+											<h3 style="display: flex; justify-content: space-between; align-items: center;">Poker Against AI Bots <a href="https://github.com/Vin916/Poker" target="_blank" class="icon brands fa-github" style="font-size: 1.2em; color: #666;"></a></h3>
 											<p>Developed a full-stack poker web application with AI bots at multiple difficulty levels using Node.js/Express and Socket.IO for real-time gameplay. Engineered intelligent bot strategies utilizing hand strength analysis, pot odds calculations, and positional awareness to create challenging opponents.</p>
 										</article>
 										<article>
