--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 											<p>Developed a full-stack poker web application with AI bots at multiple difficulty levels using Node.js/Express and Socket.IO for real-time gameplay. Engineered intelligent bot strategies utilizing hand strength analysis, pot odds calculations, and positional awareness to create challenging opponents.</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="Football Match Predictor Project" /></a>
+											<a href="#" class="image"><img src="images/football-predictor.svg" alt="Football Match Predictor Project" /></a>
 											<h3 style="display: flex; justify-content: space-between; align-items: center;">Football Match Predictor <a href="#" target="_blank" class="icon brands fa-github" style="font-size: 1.2em; color: #666;"></a></h3>
-											<p>Please provide the resume description for the Football Match Predictor project so I can create a proper summary.</p>
+											<p>Engineered an end-to-end machine learning pipeline using XGBoost, Decision Trees, and Random Forest on historical NFL data to predict game outcomes with high accuracy. Deployed a Flask-based REST API delivering real-time win probabilities and score forecasts, with optimized performance through advanced feature engineering and hyperparameter tuning.</p>
 										</article>
 									</div>
 								</section>
