--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 				object-fit: cover;
 				object-position: center;
 			}
+			/* Resume button hover effects */
+			.resume-button:hover {
+				transform: translateY(-5px);
+				box-shadow: 0 10px 25px rgba(245, 106, 106, 0.3);
+			}
 		</style>
 	</head>
 	<body class="is-preload">
@@ -143,6 +148,27 @@
 											<h3 style="display: flex; justify-content: space-between; align-items: center;">Football Match Predictor <a href="#" target="_blank" class="icon brands fa-github" style="font-size: 1.2em; color: #666;"></a></h3>
 											<p>Engineered an end-to-end machine learning pipeline using XGBoost, Decision Trees, and Random Forest on historical NFL data to predict game outcomes with high accuracy. Deployed a Flask-based REST API delivering real-time win probabilities and score forecasts, with optimized performance through advanced feature engineering and hyperparameter tuning.</p>
 										</article>
+									</div>
+								</section>
+
+							<!-- Resume Section -->
+								<section>
+									<header class="major">
+										<h2>Resume</h2>
+									</header>
+									<div class="resume-buttons" style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5em; margin-bottom: 2em;">
+										<div class="resume-button" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: 2px solid #f56a6a; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;" onclick="alert('Education section coming soon!')">
+											<h3 style="color: white; margin: 0; font-size: 1.25em;">Education</h3>
+										</div>
+										<div class="resume-button" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: 2px solid #f56a6a; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;" onclick="alert('Experience section coming soon!')">
+											<h3 style="color: white; margin: 0; font-size: 1.25em;">Experience</h3>
+										</div>
+										<div class="resume-button" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: 2px solid #f56a6a; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;" onclick="alert('Hackathons section coming soon!')">
+											<h3 style="color: white; margin: 0; font-size: 1.25em;">Hackathons</h3>
+										</div>
+										<div class="resume-button" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: 2px solid #f56a6a; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;" onclick="alert('Professional Skills section coming soon!')">
+											<h3 style="color: white; margin: 0; font-size: 1.25em;">Professional Skills</h3>
+										</div>
 									</div>
 								</section>
 
