Update resume buttons: transparent background with red hover effect matching GitHub logo style

--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 				object-fit: cover;
 				object-position: center;
 			}
-			/* Resume button hover effects */
+			/* Resume button hover effects - matching GitHub logo style */
 			.resume-button:hover {
-				transform: translateY(-5px);
-				box-shadow: 0 10px 25px rgba(245, 106, 106, 0.3);
+				border-color: #f56a6a !important;
+			}
+			.resume-button:hover h3 {
+				color: #f56a6a !important;
 			}
 		</style>
 	</head>
@@ -157,17 +159,17 @@
 										<h2>Resume</h2>
 									</header>
 									<div class="resume-buttons" style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5em; margin-bottom: 2em;">
-										<div class="resume-button" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: 2px solid #f56a6a; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;" onclick="alert('Education section coming soon!')">
-											<h3 style="color: white; margin: 0; font-size: 1.25em;">Education</h3>
+										<div class="resume-button" style="background: transparent; border: 2px solid #666; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Education section coming soon!')">
+											<h3 style="color: inherit; margin: 0; font-size: 1.25em;">Education</h3>
 										</div>
-										<div class="resume-button" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: 2px solid #f56a6a; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;" onclick="alert('Experience section coming soon!')">
-											<h3 style="color: white; margin: 0; font-size: 1.25em;">Experience</h3>
+										<div class="resume-button" style="background: transparent; border: 2px solid #666; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Experience section coming soon!')">
+											<h3 style="color: inherit; margin: 0; font-size: 1.25em;">Experience</h3>
 										</div>
-										<div class="resume-button" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: 2px solid #f56a6a; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;" onclick="alert('Hackathons section coming soon!')">
-											<h3 style="color: white; margin: 0; font-size: 1.25em;">Hackathons</h3>
+										<div class="resume-button" style="background: transparent; border: 2px solid #666; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Hackathons section coming soon!')">
+											<h3 style="color: inherit; margin: 0; font-size: 1.25em;">Hackathons</h3>
 										</div>
-										<div class="resume-button" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: 2px solid #f56a6a; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;" onclick="alert('Professional Skills section coming soon!')">
-											<h3 style="color: white; margin: 0; font-size: 1.25em;">Professional Skills</h3>
+										<div class="resume-button" style="background: transparent; border: 2px solid #666; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Professional Skills section coming soon!')">
+											<h3 style="color: inherit; margin: 0; font-size: 1.25em;">Professional Skills</h3>
 										</div>
 									</div>
 								</section>
