--- a/index.html
+++ b/index.html
@@ -159,17 +159,17 @@
 										<h2>Resume</h2>
 									</header>
 									<div class="resume-buttons" style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5em; margin-bottom: 2em;">
-										<div class="resume-button" style="background: transparent; border: 2px solid #666; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Education section coming soon!')">
-											<h3 style="color: inherit; margin: 0; font-size: 1.25em;">Education</h3>
+										<div class="resume-button" style="background: transparent; border: 2px solid #000; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Education section coming soon!')">
+											<h3 style="color: #000; margin: 0; font-size: 1.8em; font-weight: bold;">Education</h3>
 										</div>
-										<div class="resume-button" style="background: transparent; border: 2px solid #666; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Experience section coming soon!')">
-											<h3 style="color: inherit; margin: 0; font-size: 1.25em;">Experience</h3>
+										<div class="resume-button" style="background: transparent; border: 2px solid #000; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Experience section coming soon!')">
+											<h3 style="color: #000; margin: 0; font-size: 1.8em; font-weight: bold;">Experience</h3>
 										</div>
-										<div class="resume-button" style="background: transparent; border: 2px solid #666; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Hackathons section coming soon!')">
-											<h3 style="color: inherit; margin: 0; font-size: 1.25em;">Hackathons</h3>
+										<div class="resume-button" style="background: transparent; border: 2px solid #000; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Hackathons section coming soon!')">
+											<h3 style="color: #000; margin: 0; font-size: 1.8em; font-weight: bold;">Hackathons</h3>
 										</div>
-										<div class="resume-button" style="background: transparent; border: 2px solid #666; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Professional Skills section coming soon!')">
-											<h3 style="color: inherit; margin: 0; font-size: 1.25em;">Professional Skills</h3>
+										<div class="resume-button" style="background: transparent; border: 2px solid #000; border-radius: 10px; padding: 2em; text-align: center; cursor: pointer; transition: all 0.2s ease-in-out;" onclick="alert('Professional Skills section coming soon!')">
+											<h3 style="color: #000; margin: 0; font-size: 1.8em; font-weight: bold;">Professional Skills</h3>
 										</div>
 									</div>
 								</section>
