--- a/index.html
+++ b/index.html
@@ -27,12 +27,20 @@
 			.features article:hover h3 {
 				color: #f56a6a;
 			}
-			/* Project image sizing */
+			/* Project image sizing and spacing */
 			.posts article .image img {
 				width: 100%;
 				height: 250px;
 				object-fit: cover;
 				object-position: center;
+			}
+			.posts article {
+				margin-bottom: 2em;
+			}
+			.posts {
+				display: flex;
+				flex-direction: column;
+				gap: 2em;
 			}
 			/* Resume button hover effects - matching GitHub logo style */
 			.resume-button:hover {
