Revert projects layout to original grid format, remove vertical flexbox styling

--- a/index.html
+++ b/index.html
@@ -27,20 +27,12 @@
 			.features article:hover h3 {
 				color: #f56a6a;
 			}
-			/* Project image sizing and spacing */
+			/* Project image sizing */
 			.posts article .image img {
 				width: 100%;
 				height: 250px;
 				object-fit: cover;
 				object-position: center;
-			}
-			.posts article {
-				margin-bottom: 2em;
-			}
-			.posts {
-				display: flex;
-				flex-direction: column;
-				gap: 2em;
 			}
 			/* Resume button hover effects - matching GitHub logo style */
 			.resume-button:hover {
