Update resume button hover effects: red background with white text and borders

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
 				object-fit: cover;
 				object-position: center;
 			}
-			/* Resume button hover effects - matching GitHub logo style */
+			/* Resume button hover effects - red background with white text/border */
 			.resume-button:hover {
-				border-color: #f56a6a !important;
+				background-color: #f56a6a !important;
+				border-color: white !important;
 			}
 			.resume-button:hover h3 {
-				color: #f56a6a !important;
+				color: white !important;
 			}
 		</style>
 	</head>
