Simplify Contact section: replace with 'Say Hi!' heading, add phone number, remove contact form

--- a/index.html
+++ b/index.html
@@ -281,41 +281,25 @@
 									<header class="major">
 										<h2>Contact</h2>
 									</header>
-									<div class="contact-content" style="display: grid; grid-template-columns: 1fr 1fr; gap: 3em; align-items: start;">
-										<!-- Contact Information -->
-										<div class="contact-info">
-											<h3 style="color: #f56a6a; margin-bottom: 1.5em;">Get In Touch</h3>
-											<div style="margin-bottom: 2em;">
-												<div style="display: flex; align-items: center; margin-bottom: 1em;">
-													<span class="icon solid fa-envelope" style="color: #f56a6a; margin-right: 1em; font-size: 1.2em;"></span>
-													<a href="mailto:vineethr767@gmail.com" style="color: #333; text-decoration: none;">vineethr767@gmail.com</a>
-												</div>
-												<div style="display: flex; align-items: center; margin-bottom: 1em;">
-													<span class="icon brands fa-linkedin" style="color: #f56a6a; margin-right: 1em; font-size: 1.2em;"></span>
-													<a href="https://www.linkedin.com/in/vineeth-reddy123/" target="_blank" style="color: #333; text-decoration: none;">LinkedIn Profile</a>
-												</div>
-												<div style="display: flex; align-items: center; margin-bottom: 1em;">
-													<span class="icon brands fa-github" style="color: #f56a6a; margin-right: 1em; font-size: 1.2em;"></span>
-													<a href="https://github.com/Vin916" target="_blank" style="color: #333; text-decoration: none;">GitHub Profile</a>
-												</div>
+									<div class="contact-content" style="text-align: center;">
+										<h3 style="color: #f56a6a; margin-bottom: 2em; font-size: 2.5em;">Say Hi!</h3>
+										<div style="display: flex; justify-content: center; gap: 3em; flex-wrap: wrap;">
+											<div style="display: flex; align-items: center;">
+												<span class="icon solid fa-envelope" style="color: #f56a6a; margin-right: 1em; font-size: 1.5em;"></span>
+												<a href="mailto:vineethr767@gmail.com" style="color: #333; text-decoration: none; font-size: 1.1em;">vineethr767@gmail.com</a>
 											</div>
-											<p style="color: #666; line-height: 1.6;">
-												I'm always interested in discussing new opportunities, collaborating on projects, or just connecting with fellow developers and professionals. Feel free to reach out!
-											</p>
-										</div>
-										
-										<!-- Contact Form -->
-										<div class="contact-form">
-											<h3 style="color: #f56a6a; margin-bottom: 1.5em;">Send a Message</h3>
-											<form method="post" action="#" style="display: flex; flex-direction: column; gap: 1em;">
-												<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1em;">
-													<input type="text" name="name" id="name" placeholder="Your Name" style="padding: 0.75em; border: 2px solid #ddd; border-radius: 5px; font-size: 1em;" required />
-													<input type="email" name="email" id="email" placeholder="Your Email" style="padding: 0.75em; border: 2px solid #ddd; border-radius: 5px; font-size: 1em;" required />
-												</div>
-												<input type="text" name="subject" id="subject" placeholder="Subject" style="padding: 0.75em; border: 2px solid #ddd; border-radius: 5px; font-size: 1em;" required />
-												<textarea name="message" id="message" placeholder="Your Message" rows="6" style="padding: 0.75em; border: 2px solid #ddd; border-radius: 5px; font-size: 1em; resize: vertical;" required></textarea>
-												<button type="submit" style="background: #f56a6a; color: white; border: none; padding: 1em 2em; border-radius: 5px; font-size: 1em; cursor: pointer; transition: background 0.2s ease;" onmouseover="this.style.background='#e55555'" onmouseout="this.style.background='#f56a6a'">Send Message</button>
-											</form>
+											<div style="display: flex; align-items: center;">
+												<span class="icon solid fa-phone" style="color: #f56a6a; margin-right: 1em; font-size: 1.5em;"></span>
+												<a href="tel:8484046616" style="color: #333; text-decoration: none; font-size: 1.1em;">(848) 404-6616</a>
+											</div>
+											<div style="display: flex; align-items: center;">
+												<span class="icon brands fa-linkedin" style="color: #f56a6a; margin-right: 1em; font-size: 1.5em;"></span>
+												<a href="https://www.linkedin.com/in/vineeth-reddy123/" target="_blank" style="color: #333; text-decoration: none; font-size: 1.1em;">LinkedIn</a>
+											</div>
+											<div style="display: flex; align-items: center;">
+												<span class="icon brands fa-github" style="color: #f56a6a; margin-right: 1em; font-size: 1.5em;"></span>
+												<a href="https://github.com/Vin916" target="_blank" style="color: #333; text-decoration: none; font-size: 1.1em;">GitHub</a>
+											</div>
 										</div>
 									</div>
 								</section>
