--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 												</div>
 												<input type="text" name="subject" id="subject" placeholder="Subject" style="padding: 1em; border: 2px solid #e0e0e0; border-radius: 8px; font-size: 1em; background: #f9f9f9;" required />
 												<textarea name="message" id="message" placeholder="Message" rows="6" style="padding: 1em; border: 2px solid #e0e0e0; border-radius: 8px; font-size: 1em; resize: vertical; background: #f9f9f9;" required></textarea>
-												<button type="submit" style="background: #f56a6a; color: #ffffff !important; border: none; padding: 1.2em 2.5em; border-radius: 25px; font-size: 1.1em; font-weight: bold; cursor: pointer; transition: background 0.2s ease; align-self: flex-start; text-transform: uppercase; letter-spacing: 1px;" onmouseover="this.style.background='#e55555'; this.style.color='#ffffff'" onmouseout="this.style.background='#f56a6a'; this.style.color='#ffffff'">Send Message</button>
+												<button type="submit" style="background: #f56a6a; color: #ffffff !important; border: none; padding: 1.2em 2.5em; border-radius: 25px; font-size: 1.1em; font-weight: bold; cursor: pointer; transition: background 0.2s ease; align-self: flex-start; text-transform: uppercase; letter-spacing: 1px; display: flex; align-items: center; justify-content: center; text-align: center;" onmouseover="this.style.background='#e55555'" onmouseout="this.style.background='#f56a6a'">Send Message</button>
 											</form>
 										</div>
 									</div>
