Adjust contact layout: make form wider with 1.5fr ratio, flip phone icon, and align message field with phone number

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 									<header class="major">
 										<h2>Contact</h2>
 									</header>
-									<div class="contact-content" style="display: grid; grid-template-columns: 1fr 1fr; gap: 2em; align-items: start; max-width: 1400px; margin: 0 auto; padding: 0 2em;">
+									<div class="contact-content" style="display: grid; grid-template-columns: 1fr 1.5fr; gap: 1em; align-items: start; max-width: 1400px; margin: 0 auto; padding: 0 2em;">
 										<!-- Contact Information -->
 										<div class="contact-info" style="padding: 3em;">
 											<h3 style="color: #f56a6a; margin-bottom: 2em; font-size: 2.5em;">Say Hi!</h3>
@@ -309,7 +309,7 @@
 												
 												<div style="display: flex; align-items: center; margin-bottom: 2em;">
 													<div style="width: 60px; height: 60px; background: rgba(245, 106, 106, 0.1); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 1.5em;">
-														<span class="icon solid fa-phone" style="color: #f56a6a; font-size: 1.5em;"></span>
+														<span class="icon solid fa-phone" style="color: #f56a6a; font-size: 1.5em; transform: scaleX(-1);"></span>
 													</div>
 													<div>
 														<h4 style="margin: 0; color: #333; font-size: 1.4em; margin-bottom: 0.2em;">Call:</h4>
@@ -320,15 +320,15 @@
 										</div>
 										
 										<!-- Contact Form -->
-										<div class="contact-form" style="padding: 2em; width: 100%;">
-											<form method="post" action="#" style="display: flex; flex-direction: column; gap: 2.5em; width: 100%;">
-												<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2em; width: 100%;">
-													<input type="text" name="name" id="name" placeholder="Your Name" style="padding: 2em; border: 2px solid #e0e0e0; border-radius: 15px; font-size: 1.3em; background: #f9f9f9; width: 100%; box-sizing: border-box;" required />
-													<input type="email" name="email" id="email" placeholder="Your Email" style="padding: 2em; border: 2px solid #e0e0e0; border-radius: 15px; font-size: 1.3em; background: #f9f9f9; width: 100%; box-sizing: border-box;" required />
+										<div class="contact-form" style="padding: 1.5em; width: 100%;">
+											<form method="post" action="#" style="display: flex; flex-direction: column; gap: 1.5em; width: 100%;">
+												<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5em; width: 100%;">
+													<input type="text" name="name" id="name" placeholder="Your Name" style="padding: 1.5em; border: 2px solid #e0e0e0; border-radius: 12px; font-size: 1.2em; background: #f9f9f9; width: 100%; box-sizing: border-box;" required />
+													<input type="email" name="email" id="email" placeholder="Your Email" style="padding: 1.5em; border: 2px solid #e0e0e0; border-radius: 12px; font-size: 1.2em; background: #f9f9f9; width: 100%; box-sizing: border-box;" required />
 												</div>
-												<input type="text" name="subject" id="subject" placeholder="Subject" style="padding: 2em; border: 2px solid #e0e0e0; border-radius: 15px; font-size: 1.3em; background: #f9f9f9; width: 100%; box-sizing: border-box;" required />
-												<textarea name="message" id="message" placeholder="Message" rows="10" style="padding: 2em; border: 2px solid #e0e0e0; border-radius: 15px; font-size: 1.3em; resize: vertical; background: #f9f9f9; width: 100%; box-sizing: border-box;" required></textarea>
-												<button type="submit" style="background: #f56a6a; color: #ffffff !important; border: none; padding: 2em 5em; border-radius: 35px; font-size: 1.4em; font-weight: bold; cursor: pointer; transition: background 0.2s ease; align-self: flex-start; text-transform: uppercase; letter-spacing: 1px; display: flex; align-items: center; justify-content: center; text-align: center; min-width: 300px;" onmouseover="this.style.background='#e55555'" onmouseout="this.style.background='#f56a6a'">Send Message</button>
+												<input type="text" name="subject" id="subject" placeholder="Subject" style="padding: 1.5em; border: 2px solid #e0e0e0; border-radius: 12px; font-size: 1.2em; background: #f9f9f9; width: 100%; box-sizing: border-box;" required />
+												<textarea name="message" id="message" placeholder="Message" rows="6" style="padding: 1.5em; border: 2px solid #e0e0e0; border-radius: 12px; font-size: 1.2em; resize: vertical; background: #f9f9f9; width: 100%; box-sizing: border-box;" required></textarea>
+												<button type="submit" style="background: #f56a6a; color: #ffffff !important; border: none; padding: 1.5em 3em; border-radius: 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; transition: background 0.2s ease; align-self: flex-start; text-transform: uppercase; letter-spacing: 1px; display: flex; align-items: center; justify-content: center; text-align: center; min-width: 250px;" onmouseover="this.style.background='#e55555'" onmouseout="this.style.background='#f56a6a'">Send Message</button>
 											</form>
 										</div>
 									</div>
