--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 													</div>
 													<div>
 														<h4 style="margin: 0; color: #333; font-size: 1.4em; margin-bottom: 0.2em;">Call:</h4>
-														<a href="tel:8484046616" style="margin: 0; color: #666; text-decoration: none; font-size: 1.1em;">(848) 404-6616</a>
+														<a href="tel:8484046616" style="margin: 0; color: #666; text-decoration: none; font-size: 1.1em;">+1 (848) 404-6616</a>
 													</div>
 												</div>
 											</div>
