Align 'Say Hi!' heading with top of form input fields

--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
 									</header>
 									<div class="contact-content" style="display: grid; grid-template-columns: 1fr 1.5fr; gap: 1em; align-items: start; max-width: 1400px; margin: 0 auto; padding: 0 2em;">
 										<!-- Contact Information -->
-										<div class="contact-info" style="padding: 3em;">
-											<h3 style="color: #f56a6a; margin-bottom: 2em; font-size: 2.5em;">Say Hi!</h3>
+										<div class="contact-info" style="padding: 3em; padding-top: 1.5em;">
+											<h3 style="color: #f56a6a; margin-bottom: 1.5em; font-size: 2.5em; margin-top: 0;">Say Hi!</h3>
 											
 											<div style="margin-bottom: 2.5em;">
 												<div style="display: flex; align-items: center; margin-bottom: 2em;">
