Update footer: change buttons to red theme, add functional resume link, and implement scroll-to-top button with smooth animation

--- a/index.html
+++ b/index.html
@@ -68,6 +68,39 @@
 				activeButton.style.borderColor = 'white';
 				activeButton.querySelector('h3').style.color = 'white';
 			}
+
+			// Scroll to top functionality
+			function scrollToTop() {
+				window.scrollTo({
+					top: 0,
+					behavior: 'smooth'
+				});
+			}
+
+			// Show/hide scroll to top button based on scroll position
+			window.addEventListener('scroll', function() {
+				const scrollToTopBtn = document.getElementById('scrollToTop');
+				if (window.pageYOffset > 300) {
+					scrollToTopBtn.style.opacity = '1';
+					scrollToTopBtn.style.visibility = 'visible';
+				} else {
+					scrollToTopBtn.style.opacity = '0';
+					scrollToTopBtn.style.visibility = 'hidden';
+				}
+			});
+
+			// Add hover effects to scroll to top button
+			document.addEventListener('DOMContentLoaded', function() {
+				const scrollBtn = document.getElementById('scrollToTop');
+				scrollBtn.addEventListener('mouseenter', function() {
+					this.style.transform = 'scale(1.1)';
+					this.style.boxShadow = '0 6px 20px rgba(245, 106, 106, 0.4)';
+				});
+				scrollBtn.addEventListener('mouseleave', function() {
+					this.style.transform = 'scale(1)';
+					this.style.boxShadow = '0 4px 12px rgba(245, 106, 106, 0.3)';
+				});
+			});
 		</script>
 	</head>
 	<body class="is-preload">
@@ -339,13 +372,13 @@
 									<h2 style="color: #666; font-size: 3em; margin-bottom: 1.5em; font-weight: bold;">Vineeth Reddy</h2>
 									
 									<div style="display: flex; justify-content: center; gap: 1.5em; margin-bottom: 2em;">
-										<a href="https://github.com/Vin916" target="_blank" style="width: 70px; height: 70px; background: #4A90E2; border-radius: 50%; display: flex; align-items: center; justify-content: center; text-decoration: none; transition: transform 0.2s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+										<a href="https://github.com/Vin916" target="_blank" style="width: 70px; height: 70px; background: #f56a6a; border-radius: 50%; display: flex; align-items: center; justify-content: center; text-decoration: none; transition: transform 0.2s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
 											<span class="icon brands fa-github" style="color: white; font-size: 1.8em;"></span>
 										</a>
-										<a href="https://www.linkedin.com/in/vineeth-reddy123/" target="_blank" style="width: 70px; height: 70px; background: #4A90E2; border-radius: 50%; display: flex; align-items: center; justify-content: center; text-decoration: none; transition: transform 0.2s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+										<a href="https://www.linkedin.com/in/vineeth-reddy123/" target="_blank" style="width: 70px; height: 70px; background: #f56a6a; border-radius: 50%; display: flex; align-items: center; justify-content: center; text-decoration: none; transition: transform 0.2s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
 											<span class="icon brands fa-linkedin" style="color: white; font-size: 1.8em;"></span>
 										</a>
-										<a href="#" target="_blank" style="width: 70px; height: 70px; background: #4A90E2; border-radius: 50%; display: flex; align-items: center; justify-content: center; text-decoration: none; transition: transform 0.2s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+										<a href="https://drive.google.com/file/d/1uPV1EGUfNIZ0xv-ecaTi7ER3fZkdeiqN/view?usp=sharing" target="_blank" style="width: 70px; height: 70px; background: #f56a6a; border-radius: 50%; display: flex; align-items: center; justify-content: center; text-decoration: none; transition: transform 0.2s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
 											<span style="color: white; font-size: 1.8em; font-weight: bold; font-family: Arial, sans-serif;">R</span>
 										</a>
 									</div>
@@ -356,6 +389,10 @@
 						</div>
 					</div>
 
+				<!-- Scroll to Top Button -->
+					<button id="scrollToTop" style="position: fixed; bottom: 30px; right: 30px; width: 60px; height: 60px; background: #f56a6a; border: none; border-radius: 50%; color: white; font-size: 1.5em; cursor: pointer; box-shadow: 0 4px 12px rgba(245, 106, 106, 0.3); transition: all 0.3s ease; opacity: 0; visibility: hidden; z-index: 1000;" onclick="scrollToTop()">
+						<span class="icon solid fa-chevron-up"></span>
+					</button>
 
 			</div>
 
