--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
 					</div>
 
 				<!-- Scroll to Top Button -->
-					<button id="scrollToTop" style="position: fixed; bottom: 30px; right: 30px; width: 60px; height: 60px; background: #f56a6a; border: none; border-radius: 50%; color: white; font-size: 1.5em; cursor: pointer; box-shadow: 0 4px 12px rgba(245, 106, 106, 0.3); transition: all 0.3s ease; opacity: 0; visibility: hidden; z-index: 1000;" onclick="scrollToTop()">
-						<span class="icon solid fa-chevron-up"></span>
+					<button id="scrollToTop" style="position: fixed; bottom: 30px; right: 30px; width: 60px; height: 60px; background: #f56a6a; border: none; border-radius: 50%; color: white; font-size: 1.8em; cursor: pointer; box-shadow: 0 4px 12px rgba(245, 106, 106, 0.3); transition: all 0.3s ease; opacity: 0; visibility: hidden; z-index: 1000; display: flex; align-items: center; justify-content: center;" onclick="scrollToTop()">
+						<span class="icon solid fa-arrow-up"></span>
 					</button>
 
 			</div>
