--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
 					</div>
 
 				<!-- Scroll to Top Button -->
-					<button id="scrollToTop" style="position: fixed; bottom: 30px; right: 30px; width: 80px; height: 80px; min-width: 80px; max-width: 80px; background: #f56a6a; border: none; border-radius: 50%; color: #ffffff !important; font-size: 3em; cursor: pointer; box-shadow: 0 6px 20px rgba(245, 106, 106, 0.4); transition: all 0.3s ease; opacity: 0; visibility: hidden; z-index: 1000; display: flex; align-items: center; justify-content: center; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; font-weight: bold; text-shadow: 0 1px 2px rgba(0,0,0,0.2);" onclick="scrollToTop()">
-						<span style="color: #ffffff !important; font-size: 1em; line-height: 1;">▲</span>
+					<button id="scrollToTop" style="position: fixed; bottom: 30px; right: 30px; width: 80px; height: 80px; min-width: 80px; max-width: 80px; background: #f56a6a; border: none; border-radius: 50%; color: #ffffff !important; font-size: 2.5em; cursor: pointer; box-shadow: 0 6px 20px rgba(245, 106, 106, 0.4); transition: all 0.3s ease; opacity: 0; visibility: hidden; z-index: 1000; display: flex; align-items: center; justify-content: center; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; font-weight: bold; text-shadow: 0 1px 2px rgba(0,0,0,0.2);" onclick="scrollToTop()">
+						<span style="color: #ffffff !important; font-size: 1em; line-height: 1;">↑</span>
 					</button>
 
 			</div>
