Add Open Graph and social media meta tags to control link previews with proper portfolio image and description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		
+		<!-- Open Graph / Social Media Meta Tags -->
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Vineeth Reddy - Portfolio" />
+		<meta property="og:description" content="Computer Science, Data Science, and Economics student at Rutgers University. Passionate about technology, machine learning, and solving real-world challenges." />
+		<meta property="og:url" content="https://vin916.github.io/Personal_website/" />
+		<meta property="og:image" content="https://vin916.github.io/Personal_website/images/vineeth-screenshot.jpg" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:site_name" content="Vineeth Reddy Portfolio" />
+		
+		<!-- Twitter Card Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Vineeth Reddy - Portfolio" />
+		<meta name="twitter:description" content="Computer Science, Data Science, and Economics student at Rutgers University. Passionate about technology, machine learning, and solving real-world challenges." />
+		<meta name="twitter:image" content="https://vin916.github.io/Personal_website/images/vineeth-screenshot.jpg" />
+		
+		<!-- Additional Meta Tags -->
+		<meta name="description" content="Vineeth Reddy's portfolio showcasing projects in computer science, data science, and economics. Student at Rutgers University with expertise in machine learning, software development, and data analysis." />
+		<meta name="keywords" content="Vineeth Reddy, Computer Science, Data Science, Economics, Rutgers University, Portfolio, Machine Learning, Software Development" />
+		<meta name="author" content="Vineeth Reddy" />
 		<style>
 			/* Course icon hover effects - matching the social media icons */
 			.features article {
